# DominionAI

./: README.md  main.py  pyproject.toml
dominionai/: __init__.py  base.py  strategies.py  tournament.py
